@@ -1,24 +1,24 @@
 package org.example;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.MalformedURLException;
-import java.net.URISyntaxException;
+import java.io.*;
 import java.net.URL;
-import java.net.URLConnection;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.*;
 
 public class HttpStatusImageDownloader {
-    HttpStatusChecker httpStatusChecker = new HttpStatusChecker();
-    public void downloadStatusImage(String code) throws IOException, IncorrectCodeExeptions {
-        String url = httpStatusChecker.getResponse(code);
-        URL urlObj = new URL(url);
-        InputStream inputStream = urlObj.openStream();
-           if(!Files.exists(Path.of("resources\\image\\"+code+".jpg"))){
-               Files.copy(inputStream, new File("C:\\Java programs\\module9_1\\src\\main\\resources\\image\\"+code+".jpg").toPath());
-           }
+
+    public void downloadStatusImage(String code, String imageUrl) throws IOException {
+        URL url = new URL(imageUrl);
+
+        Path imagePath = Paths.get("src/main/resources/image/" + code + ".jpg");
+
+        if (!Files.exists(imagePath)) {
+            try (InputStream inputStream = url.openStream()) {
+                Files.createDirectories(imagePath.getParent());
+                Files.copy(inputStream, imagePath);
+                System.out.println("Image downloaded to: " + imagePath);
+            }
+        } else {
+            System.out.println("Image already exists at: " + imagePath);
+        }
     }
 }
